[gd_scene load_steps=4 format=3 uid="uid://j8jh4hqnt6f3"]

[ext_resource type="Texture2D" uid="uid://1aju54ohlkbh" path="res://assets/Main Menu Background.jpeg" id="1_qgd8p"]
[ext_resource type="Script" uid="uid://cun7hr3ybtba3" path="res://scripts/menu_manager.gd" id="2_1i3ks"]

[sub_resource type="LabelSettings" id="LabelSettings_7yr4w"]
font_size = 64

[node name="Main Menu" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qgd8p")
expand_mode = 2
script = ExtResource("2_1i3ks")

[node name="VBoxContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 168.0

[node name="MainMenuLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"
label_settings = SubResource("LabelSettings_7yr4w")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_top = 102.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="ButtonContainer" type="HFlowContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "PLAY"

[node name="SettingsButton" type="Button" parent="CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "SETTINGS"

[node name="CreditsButton" type="Button" parent="CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "CREDITS"

[node name="QuitButton" type="Button" parent="CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "QUIT"

[connection signal="pressed" from="CenterContainer/ButtonContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/ButtonContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/ButtonContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
